--- a/Docks/docker-laravel/docker-compose.yml
+++ b/Docks/docker-laravel/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - 8080:80
     environment:
       - PMA_ARBITRARY=1
-      - PMA_HOST-db
+      - PMA_HOST=db
       - PMA_USER=root
       - PMA_PASSWORD=root
     container_name: "phpmyadmin-la"
